sfSandBoxCode/force-app/main/default/objects/Payment__c/Payment__c.object-meta.xml
<CustomObject>
    <description>Payments related to an opportunity</description>
    <label>XPayment</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Payment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>XPayments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>