sfSandBoxCode/force-app/main/default/objects/Payment__c/fields/Amount_to_Kiva__c.field-meta.xml
<CustomField>
    <fullName>Amount_to_Kiva__c</fullName>
    <formula>IF( ISPICKVAL( Payment_Type__c , &quot;Kiva Monthly Payment&quot;) ,  IF( Payment_Amount__c  &lt; 5000, 3000, 5000) , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount to Kiva</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>