sfSandBoxCode/force-app/main/default/objects/Payment__c/fields/Confirmation_Number__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Number__c</fullName>
    <description>The confirmation number for the payment made</description>
    <inlineHelpText>Please enter the confirmation number for the payment made</inlineHelpText>
    <label>Confirmation Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>