sfSandBoxCode/force-app/main/default/objects/Payment__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of the payment (i.e. Application deposit, installment 1, etc.)</description>
    <inlineHelpText>Please enter the description of the payment (i.e. Application deposit, installment 1, etc.)</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>