sfSandBoxCode/force-app/main/default/objects/Payment__c/fields/Description_Hidden__c.field-meta.xml
<CustomField>
    <fullName>Description_Hidden__c</fullName>
    <label>Description Hidden</label>
    <length>25</length>
    <type>Text</type>
</CustomField>