sfSandBoxCode/force-app/main/default/objects/Payment__c/fields/Installation_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Installation_Payment_Amount__c</fullName>
    <formula>IF(TEXT(Payment_Type__c) = &quot;Installation Deposit&quot;,  Payment_Amount__c, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installation Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>