sfSandBoxCode/force-app/main/default/objects/Payment__c/fields/Kiva_Monthly_Amounts__c.field-meta.xml
<CustomField>
    <fullName>Kiva_Monthly_Amounts__c</fullName>
    <formula>IF(TEXT(Payment_Type__c) = &quot;Kiva Monthly Payment&quot;, Payment_Amount__c, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Kiva Monthly Amounts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>