sfSandBoxCode/force-app/main/default/objects/Payment__c/fields/Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payment_Amount__c</fullName>
    <description>The amount of the payment that was made or scheduled</description>
    <inlineHelpText>Please enter the amount of the payment that was made or scheduled</inlineHelpText>
    <label>Payment Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>