sfSandBoxCode/force-app/main/default/objects/Payment__c/fields/Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date__c</fullName>
    <description>Date that the payment was made or is scheduled for.</description>
    <inlineHelpText>Please enter the date that the payment was made or is scheduled for.</inlineHelpText>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>