sfSandBoxCode/force-app/main/default/objects/Payment__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <description>The method of payment scheduled or made</description>
    <inlineHelpText>Please enter the method of payment that is scheduled or made.</inlineHelpText>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>mPesa</fullName>
            </value>
            <value>
                <fullName>Airtel Money</fullName>
            </value>
            <value>
                <fullName>Bank Deposit</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>