sfSandBoxCode/force-app/main/default/objects/Payment__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Application Deposit</fullName>
            </value>
            <value>
                <fullName>Installation Deposit</fullName>
            </value>
            <value>
                <fullName>Kiva Monthly Payment</fullName>
            </value>
            <value>
                <fullName>Payment Installment</fullName>
            </value>
            <value>
                <fullName>Renewal Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>