sfSandBoxCode/force-app/main/default/objects/Payment__c/fields/Received_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Received_Payment_Date__c</fullName>
    <label>Received Payment Date</label>
    <type>Date</type>
</CustomField>