sfSandBoxCode/force-app/main/default/objects/Payment__c/validationRules/Received_Payment_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Received_Payment_Date_Required</fullName>
    <active>false</active>
    <description>Require Received Payment Date once a payment is listed as received</description>
    <errorConditionFormula>ISPICKVAL(Payment_Status__c, &quot;Received&quot;)</errorConditionFormula>
    <errorMessage>Please enter a Received Payment Date</errorMessage>
</ValidationRule>