sfSandBoxCode/force-app/main/default/objects/Payment__c/listViews/All2.listView-meta.xml
<ListView>
    <fullName>All2</fullName>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Opportunity__c</field>
        <operation>equals</operation>
        <value>Geoffrey Warui Mwangi</value>
    </filters>
    <label>All</label>
    <language>en_US</language>
</ListView>